--- a/Pkg/PkgHttpSysBridge.dproj
+++ b/Pkg/PkgHttpSysBridge.dproj
@@ -45,6 +45,12 @@
         <CfgParent>Base</CfgParent>
         <Base>true</Base>
     </PropertyGroup>
+    <PropertyGroup Condition="('$(Platform)'=='Win64' and '$(Cfg_2)'=='true') or '$(Cfg_2_Win64)'!=''">
+        <Cfg_2_Win64>true</Cfg_2_Win64>
+        <CfgParent>Cfg_2</CfgParent>
+        <Cfg_2>true</Cfg_2>
+        <Base>true</Base>
+    </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
         <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
         <DCC_ExeOutput>.\$(Platform)\$(Config)</DCC_ExeOutput>
@@ -58,7 +64,7 @@
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;$(DCC_Namespace)</DCC_Namespace>
         <DCC_CBuilderOutput>All</DCC_CBuilderOutput>
         <SanitizedProjectName>PkgHttpSysBridge</SanitizedProjectName>
-        <DCC_UnitSearchPath>C:\Users\Public\Documents\Embarcadero\Studio\21.0\mORMot;$(BDSCOMMONDIR)\mORMot\SQLite3;$(BDSCOMMONDIR)\mORMot\SynDBDataset;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>$(BDSCOMMONDIR)\modified_mORMot;$(BDSCOMMONDIR)\modified_mORMot\SQLite3;$(BDSCOMMONDIR)\modified_mORMot\SynDBDataset;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_SysLibRoot>$(BDSCOMMONDIR)\mORMot;$(BDSCOMMONDIR)\mORMot\SQLite3;$(BDSCOMMONDIR)\mORMot\SynDBDataset;$(DCC_SysLibRoot)</DCC_SysLibRoot>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
@@ -98,6 +104,9 @@
         <DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
         <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
         <DCC_DebugInformation>0</DCC_DebugInformation>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Cfg_2_Win64)'!=''">
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
